# bit-reversal-trees

./: .env.example  .gitignore  README.md  Victor_challenge.md  bit-reversal-trees.cabal  custom_ghci_config.ghci  haskell_prompt.md  package.yaml  python_prompt.md  python_prompt_no_helper.md
app/: Main.hs
python/: hypothesis_tests_python.py  pyproject.toml  requirements.txt  solve_challenge.py  test_custom_invert.py  test_solve_challenge.py  test_solve_challenge_ghci.py  test_solve_challenge_hypothesis.py  test_solve_challenge_quickcheck.py  utils.py
python/some_almost_solutions_found/: solutions_calls_claude0.jsonl  solutions_calls_claude1.jsonl  solutions_calls_claude2.jsonl  solutions_calls_new_sonnet.jsonl  solutions_calls_python0.jsonl  solutions_new_sonnet.txt  solutions_o1-mini_haskell.txt  solutions_o1-preview.txt  solutions_python_0.txt  solutions_python_1.txt  solutions_python_2.txt  solutions_python_calls0.jsonl  solutions_python_calls1.jsonl  solutions_python_calls2.jsonl
src/: Lib.hs
test/: DynamicSpec.hs  Spec.hs
typescript/: test_custom_invert.mts
