[project]
name = "python"
version = "0.1.0"
description = "Victor Taelin's Bit-Reversal Trees challenge: LLM search for Haskell and Python solutions satisfying the constraints."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "hypothesis>=6.130.4",
    "litellm>=1.64.1",
    "notify2>=0.3.1",
    "openai>=1.68.2",
    "pexpect>=4.9.0",
    "pync>=2.0.3",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "termcolor>=2.5.0",
    "tqdm>=4.67.1",
    "weave>=0.51.39",
]
